test/testdata/k8s/pass/pod-nonroot.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-pod
  namespace: default
spec:
  serviceAccountName: mondoo-test
  serviceAccount: mondoo-test
  securityContext:
    runAsNonRoot: true
  containers:
    - name: nginx
      image: nginx:1.21.6
      ports:
        - containerPort: 8080
      imagePullPolicy: Always
      securityContext:
        privileged: false
        readOnlyRootFilesystem: true
      resources:
        limits:
          cpu: 100m
          memory: 200Mi
        requests:
          cpu: 100m
          memory: 200Mi
      readinessProbe:
        tcpSocket:
          port: 8080
        initialDelaySeconds: 5
        periodSeconds: 10
      livenessProbe:
        tcpSocket:
          port: 8080
        initialDelaySeconds: 15
        periodSeconds: 20
