test/testdata/k8s/pass/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: sample
spec:
  selector:
    app: sample-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8989
